--- a/sass/core/_variables.scss
+++ b/sass/core/_variables.scss
@@ -148,6 +148,7 @@ $accordion-heading-font-size:         $font-size-xl !default;
 $accordion-heading-font-weight:       $font-weight-bold !default;
 $accordion-heading-spacing:           $padding !default;
 $accordion-content-spacing:           $padding !default;
+$accordion-toggle-spacing:            0 $padding / 2 0 0 !default;
 $accordion-toggle-transition:         all $transition-effect $transition-duration !default;
 
 // Alert //
